HW4/javali_tests/others/new/HW3_MarLin/type_error/assignment/ErrAssignNullToInt.javali
class Main {

   void main() {
      int i;
      i = null;
   }
}
